--- a/Conociendo vuex/index.html
+++ b/Conociendo vuex/index.html
@@ -17,11 +17,13 @@
     template: 
     `
     <div>
-      <h1>Numero {{ $store.state.numero }}</h1>
+      <h1>Numero {{numero }}</h1>
       <button @click="$store.commit('decrementar')">decrementar</button>
     </div>
-
-    `
+    `,
+    computed: {
+    ...Vue.mapState(['numero'])
+    }
   });
 
   Vue.component('hijo', {
